Feature/mvp 4 (#4)
implement stateful MVP-4